kubernetes_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client-container
        image: thejasrao2003/mircro_services-client:latest
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management-deployment
  labels:
    app: user-management
spec:
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
    spec:
      containers:
      - name: user-management-container
        image: thejasrao2003/mircro_services-user:latest
        ports:
        - containerPort: 5001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-management-deployment
  labels:
    app: product-management
spec:
  selector:
    matchLabels:
      app: product-management
  template:
    metadata:
      labels:
        app: product-management
    spec:
      containers:
      - name: product-management-container
        image: thejasrao2003/mircro_services-product:latest
        ports:
        - containerPort: 5002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-management-deployment
  labels:
    app: order-management
spec:
  selector:
    matchLabels:
      app: order-management
  template:
    metadata:
      labels:
        app: order-management
    spec:
      containers:
      - name: order-management-container
        image: thejasrao2003/mircro_services-order:latest
        ports:
        - containerPort: 5003
---
