kubernetes_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: NodePort
  selector:
    app: client
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: user-management-service
spec:
  type: NodePort
  selector:
    app: user-management
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: product-management-service
spec:
  type: NodePort
  selector:
    app: product-management
  ports:
  - protocol: TCP
    port: 5002
    targetPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: order-management-service
spec:
  type: NodePort
  selector:
    app: order-management
  ports:
  - protocol: TCP
    port: 5003
    targetPort: 5003
